Fix scrollbar displays on Windows browsers

--- a/pages/graphics/graphics.less
+++ b/pages/graphics/graphics.less
@@ -7,6 +7,12 @@
   bottom: auto;
   height: 100%;
 
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   #albums-content {
     position: relative;
   }
@@ -600,6 +606,7 @@
 
     .hires-img {
       margin:0 auto;
+      max-height: 100%;
 
       img {
         max-height: 100%;
